Add request handler for generic metrics format.